tests/negative/expr_reify_call.lev
// LA-31 Stage 3 §3 — non-whitelisted call (E2 + generated allow-list, R6).
class User { string name; new User(string n) { name = n; } }
string useIt(expr::Expr<(User)=>bool> e) { return "x"; }
console.writeln(useIt((u) => u.name.toUpper() == "X"));
